# LogicGate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: logicgate-scan.yml
logicgate/: __init__.py  analyzer.py  cli.py  graph.py  models.py  parser.py  remediator.py  reporter.py
logicgate/queries/: express_routes.scm  function_calls.scm  function_defs.scm  require_imports.scm
tests/: test_graph.py  test_parser.py  test_remediator.py  test_reporter.py
tests/fixtures/: server.js
