[project]
name = "logicgate"
version = "0.1.0"
description = "AI-native Blue Team CLI for Business Logic Vulnerability detection in JavaScript/TypeScript"
authors = [
    {name = "Patty"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer[all] (>=0.23.1,<0.24.0)",
    "rich (>=14.3.2,<15.0.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=0.13.0,<0.14.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "anthropic (>=0.79.0,<0.80.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[project.scripts]
logicgate = "logicgate.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
